@@ -4,6 +4,20 @@ Choices: qmqp-source (1)${!TAB}- multi-threaded QMQP test generator${!TAB}foo, q
 Description: Select one option
  This is the prompt for a select-type question
 
+Template: test-align/select-center-right-column
+Type: select
+Choices: |---------------|${!TAB}|---------------|, left${!TAB}., ${!ALIGN=CENTER}center${!TAB}., ${!ALIGN=RIGHT}right${!TAB}.
+
+Template: test-align/select-center-right-columns
+Type: select
+Choices: |---------------|${!TAB}|---------------|${!TAB}|---------------|${!TAB}|---------------|, left${!TAB}${!ALIGN=CENTER}center${!TAB}${!ALIGN=RIGHT}right${!TAB}., ${!ALIGN=RIGHT}right${!TAB}left${!TAB}${!ALIGN=CENTER}center${!TAB}., ${!ALIGN=CENTER}center${!TAB}${!ALIGN=RIGHT}right${!TAB}left${!TAB}.
+
+Template: test-align/select-center-right-full
+Type: select
+Choices: |---------------|, left, ${!ALIGN=CENTER}center, ${!ALIGN=RIGHT}right
+Description: Test alignment options
+ Verify if choices are correctly aligned depending on their options.
+
 Template: test-align/select-generated
 Type: select
 Choices: ${CHOICES}
@@ -16,7 +30,17 @@ Choices: qmqp-source (1)${!TAB}- multi-threaded QMQP test generator${!TAB}foo, q
 Description: Select some options
  This is the prompt for a multiselect-type question
 
+Template: test-align/languagelist
+Type: select
+Choices-C: C, sq, ar, eu, be, bs, bg, ca, zh_CN, zh_TW, hr, cs, da, nl, en, eo, et, fi, fr, gl, de, el, he, hu, id, it, ja, ko, ku, lv, lt, mk, se_NO, nb_NO, nn_NO, pl, pt, pt_BR, ro, ru, sk, sl, es, sv, tl, tr, uk, vi, wo
+Choices: C, Albanian, Arabic, Basque, Belarusian, Bosnian, Bulgarian, Catalan, Chinese (Simplified), Chinese (Traditional), Croatian, Czech, Danish, Dutch, English, Esperanto, Estonian, Finnish, French, Galician, German, Greek, Hebrew, Hungarian, Indonesian, Italian, Japanese, Korean, Kurdish, Latvian, Lithuanian, Macedonian, Northern Sami, Norwegian Bokmaal, Norwegian Nynorsk, Polish, Portuguese, Portuguese (Brazil), Romanian, Russian, Slovak, Slovenian, Spanish, Swedish, Tagalog, Turkish, Ukrainian, Vietnamese, Wolof
+Choices-en.UTF-8: C${!TAB}-${!TAB}No localization, Albanian${!TAB}-${!TAB}Shqip, Arabic${!TAB}-${!TAB}عربي, Basque${!TAB}-${!TAB}Euskara, Belarusian${!TAB}-${!TAB}Беларуская, Bosnian${!TAB}-${!TAB}Bosanski, Bulgarian${!TAB}-${!TAB}Български, Catalan${!TAB}-${!TAB}Català, Chinese (Simplified)${!TAB}-${!TAB}中文(简体), Chinese (Traditional)${!TAB}-${!TAB}中文(繁體), Croatian${!TAB}-${!TAB}Hrvatski, Czech${!TAB}-${!TAB}Čeština, Danish${!TAB}-${!TAB}Dansk, Dutch${!TAB}-${!TAB}Nederlands, English${!TAB}-${!TAB}English, Esperanto${!TAB}-${!TAB}Esperanto, Estonian${!TAB}-${!TAB}Eesti, Finnish${!TAB}-${!TAB}Suomi, French${!TAB}-${!TAB}Français, Galician${!TAB}-${!TAB}Galego, German${!TAB}-${!TAB}Deutsch, Greek${!TAB}-${!TAB}Ελληνικά, Hebrew${!TAB}-${!TAB}עברית, Hungarian${!TAB}-${!TAB}Magyar, Indonesian${!TAB}-${!TAB}Bahasa Indonesia, Italian${!TAB}-${!TAB}Italiano, Japanese${!TAB}-${!TAB}日本語, Korean${!TAB}-${!TAB}한국어, Kurdish${!TAB}-${!TAB}Kurdî, Latvian${!TAB}-${!TAB}Latviski, Lithuanian${!TAB}-${!TAB}Lietuviškai, Macedonian${!TAB}-${!TAB}Македонски, Northern Sami${!TAB}-${!TAB}Sámegillii, Norwegian Bokmaal${!TAB}-${!TAB}Norsk bokmål, Norwegian Nynorsk${!TAB}-${!TAB}Norsk nynorsk, Polish${!TAB}-${!TAB}Polski, Portuguese${!TAB}-${!TAB}Português, Portuguese (Brazil)${!TAB}-${!TAB}Português do Brasil, Romanian${!TAB}-${!TAB}Română, Russian${!TAB}-${!TAB}Русский, Slovak${!TAB}-${!TAB}Slovenčina, Slovenian${!TAB}-${!TAB}Slovenščina, Spanish${!TAB}-${!TAB}Español, Swedish${!TAB}-${!TAB}Svenska, Tagalog${!TAB}-${!TAB}Tagalog, Turkish${!TAB}-${!TAB}Türkçe, Ukrainian${!TAB}-${!TAB}Українська, Vietnamese${!TAB}-${!TAB}Tiếng Việt, Wolof${!TAB}-${!TAB}Wolof
+Default en
+Description: Choose a language:
+ Please choose the language used for the installation process. This
+ language will be the default language for the final system.
+
 Template: test-align/choose_partition
 Type: select
-Choices: Configure the Logical Volume Manager, Guided partitioning, Help on partitioning, , IDE1 master (hda) - 1.1 GB QEMU HARDDISK , >${!TAB}#1${!TAB}primary${!TAB}255.0 MB${!TAB}B${!TAB}f${!TAB}ext3${!TAB}/boot  , >${!TAB}#2${!TAB}primary${!TAB}814.3 MB${!TAB}${!TAB}K${!TAB}lvm   , LVM VG debian\, LV home - 176.2 MB Linux device-mapper    , >${!TAB}#1${!TAB}${!TAB}176.2 MB${!TAB}${!TAB}f${!TAB}ext3${!TAB}/home     , LVM VG debian\, LV root - 536.9 MB Linux device-mapper      , >${!TAB}#1${!TAB}${!TAB}536.9 MB${!TAB}${!TAB}f${!TAB}ext3${!TAB}/       , LVM VG debian\, LV swap_1 - 100.7 MB Linux device-mapper        , >${!TAB}#1${!TAB}${!TAB}10.7 MB${!TAB}${!TAB}f${!TAB}swap${!TAB}swap         , , Undo changes to partitions, Finish partitioning and write changes to disk
+Choices: ${!ALIGN=CENTER}Configure the Logical Volume Manager, ${!ALIGN=CENTER}Guided partitioning, ${!ALIGN=CENTER}Help on partitioning, , IDE1 master (hda) - 1.1 GB QEMU HARDDISK , >${!TAB}#1${!TAB}primary${!TAB}${!ALIGN=RIGHT}255.0 MB${!TAB}B${!TAB}f${!TAB}ext3${!TAB}/boot  , >${!TAB}#2${!TAB}primary${!TAB}${!ALIGN=RIGHT}814.3 MB${!TAB}${!TAB}K${!TAB}lvm   , LVM VG debian\, LV home - 176.2 MB Linux device-mapper    , >${!TAB}#1${!TAB}${!TAB}${!ALIGN=RIGHT}176.2 MB${!TAB}${!TAB}f${!TAB}ext3${!TAB}/home     , LVM VG debian\, LV root - 536.9 MB Linux device-mapper      , >${!TAB}#1${!TAB}${!TAB}${!ALIGN=RIGHT}536.9 MB${!TAB}${!TAB}f${!TAB}ext3${!TAB}/       , LVM VG debian\, LV swap_1 - 100.7 MB Linux device-mapper        , >${!TAB}#1${!TAB}${!TAB}${!ALIGN=RIGHT}10.7 MB${!TAB}${!TAB}f${!TAB}swap${!TAB}swap         , , ${!ALIGN=CENTER}Undo changes to partitions, ${!ALIGN=CENTER}Finish partitioning and write changes to disk
 Description: This is an overview of your currently configured partitions and mount points. Select a partition to modify its settings (file system, mount point, etc.), a free space to create partitions, or a device to initialise its partition table.
